--- a/amplify.yml
+++ b/amplify.yml
@@ -3,12 +3,7 @@ frontend:
   phases:
     preBuild:
       commands:
-        - ZOLA_VERSION=$(python - <<'PY'
-import json, urllib.request
-data = json.load(urllib.request.urlopen("https://api.github.com/repos/getzola/zola/releases/latest"))
-print(data["tag_name"])
-PY
-          )
+        - ZOLA_VERSION=$(python -c "import json, urllib.request; data=json.load(urllib.request.urlopen('https://api.github.com/repos/getzola/zola/releases/latest')); print(data['tag_name'])")
         - curl -sL "https://github.com/getzola/zola/releases/download/${ZOLA_VERSION}/zola-${ZOLA_VERSION}-x86_64-unknown-linux-gnu.tar.gz" -o zola.tar.gz
         - tar -xzf zola.tar.gz
         - chmod +x zola
