--- a/.github/workflows/tts.yml
+++ b/.github/workflows/tts.yml
@@ -29,6 +29,9 @@ jobs:
         with:
           python-version: "3.11"
 
+      - name: Install ffmpeg
+        run: sudo apt-get update && sudo apt-get install -y ffmpeg
+
       - name: Detect changed blog posts
         id: changed
         run: |
