--- a/customHttp.yml
+++ b/customHttp.yml
@@ -4,7 +4,7 @@ customHeaders:
       - key: "Strict-Transport-Security"
         value: "max-age=31536000; includeSubDomains"
       - key: "Content-Security-Policy"
-        value: "default-src 'self'; base-uri 'self'; object-src 'none'; frame-ancestors 'self'; img-src 'self' data:; font-src 'self' data:; script-src 'self'; style-src 'self' 'unsafe-inline'"
+        value: "default-src 'self'; base-uri 'self'; object-src 'none'; frame-ancestors 'self'; img-src 'self' data: https://d3bphourhbt2ew.cloudfront.net; font-src 'self' data: https://d3bphourhbt2ew.cloudfront.net; script-src 'self' https://d3bphourhbt2ew.cloudfront.net; style-src 'self' 'unsafe-inline' https://d3bphourhbt2ew.cloudfront.net; connect-src 'self' https://d3bphourhbt2ew.cloudfront.net"
       - key: "X-Frame-Options"
         value: "SAMEORIGIN"
       - key: "X-Content-Type-Options"
