--- a/.github/workflows/tts.yml
+++ b/.github/workflows/tts.yml
@@ -53,3 +53,21 @@ jobs:
           for file in ${{ steps.changed.outputs.files }}; do
             scripts/generate_tts_for_file.sh "$file"
           done
+
+  invalidate_cache:
+    runs-on: ubuntu-latest
+    needs: tts
+    steps:
+      - name: Configure AWS credentials (OIDC)
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          aws-region: us-west-2
+
+      - name: Invalidate CloudFront cache
+        env:
+          CLOUDFRONT_DISTRIBUTION_ID: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
+        run: |
+          aws cloudfront create-invalidation \
+            --distribution-id "$CLOUDFRONT_DISTRIBUTION_ID" \
+            --paths "/*"
