--- a/.github/workflows/tts_full.yml
+++ b/.github/workflows/tts_full.yml
@@ -39,3 +39,21 @@ jobs:
           REGION: us-west-2
         run: |
           scripts/generate_tts.sh
+
+  invalidate_cache:
+    runs-on: ubuntu-latest
+    needs: tts_full
+    steps:
+      - name: Configure AWS credentials (OIDC)
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          aws-region: us-west-2
+
+      - name: Invalidate CloudFront cache
+        env:
+          CLOUDFRONT_DISTRIBUTION_ID: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
+        run: |
+          aws cloudfront create-invalidation \
+            --distribution-id "$CLOUDFRONT_DISTRIBUTION_ID" \
+            --paths "/*"
